# useless-project

./: README.md  index.html  pyproject.toml
question_dir/: next_question.html
response_dir/: lights_resp_1.html  lights_resp_2.html  response.html
templates/: index.html
